force-app/main/default/objects/FN_ProjectionLine__c/FN_ProjectionLine__c.object-meta.xml
<CustomObject>
    <description>a line item of a projection</description>
    <label>Projection Line</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projection Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>