force-app/main/default/objects/FN_ProjectionLine__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>notes/description maps to the new story details field.</inlineHelpText>
    <label>Details</label>
    <length>512</length>
    <type>Html</type>
</CustomField>