force-app/main/default/objects/FN_ProjectionLine__c/fields/Projection__c.field-meta.xml
<CustomField>
    <fullName>Projection__c</fullName>
    <description>The related projection</description>
    <inlineHelpText>The related projection</inlineHelpText>
    <label>Projection</label>
    <referenceTo>FN_Projection__c</referenceTo>
    <relationshipLabel>Projection Lines</relationshipLabel>
    <relationshipName>ProjectionLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>