force-app/main/default/objects/FN_ProjectionLine__c/fields/WorkItem__c.field-meta.xml
<CustomField>
    <fullName>WorkItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related work item</description>
    <inlineHelpText>The work item that was created from this record</inlineHelpText>
    <label>Work Item</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Projection Lines</relationshipLabel>
    <relationshipName>Projection_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>