force-app/main/default/objects/FN_ProjectionLine__c/fields/WorkItemSize__c.field-meta.xml
<CustomField>
    <fullName>WorkItemSize__c</fullName>
    <formula>WorkItem__r.agf__Story_Points__c</formula>
    <label>Work Item Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>