force-app/main/default/objects/FN_ProjectionLine__c/fields/WorkItemStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkItemStatus__c</fullName>
    <description>The related work item&#39;s status</description>
    <formula>TEXT( WorkItem__r.agf__Status__c )</formula>
    <inlineHelpText>The related work item&#39;s status</inlineHelpText>
    <label>Work Item Status</label>
    <type>Text</type>
</CustomField>