force-app/main/default/objects/FN_ProjectionLine__c/listViews/defalut.listView-meta.xml
<ListView>
    <fullName>defalut</fullName>
    <columns>NAME</columns>
    <columns>FiftySize__c</columns>
    <columns>NinetySize__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>WorkItem__c</columns>
    <columns>WorkItemSize__c</columns>
    <columns>WorkItemStatus__c</columns>
    <columns>Projection__c</columns>
    <filterScope>Everything</filterScope>
    <label>_defalut</label>
</ListView>